trying to solve issue in method save and error with UUID

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:postgresql://localhost:5455/productsManagement
+spring.datasource.username=postgres
+spring.datasource.password=el1972
 
+spring.jpa.hibernate.ddl-auto=validate
