--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5455/productsManagement
+server.port=80
+
+spring.datasource.url=jdbc:postgresql://database-1.cx4r992xua5j.eu-central-1.rds.amazonaws.com:5432/productsManagement
 spring.datasource.username=postgres
-spring.datasource.password=el1972
+spring.datasource.password=elnurkasimov2012
 
 spring.jpa.hibernate.ddl-auto=validate
