fixed bug in AuthService.save()

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=80
 
-spring.datasource.url=jdbc:postgresql://database-1.cx4r992xua5j.eu-central-1.rds.amazonaws.com:5432/productsManagement
+spring.datasource.url=jdbc:postgresql://localhost:5432/productsManagement
 spring.datasource.username=postgres
-spring.datasource.password=elnurkasimov2012
+spring.datasource.password=el1972
 
 spring.jpa.hibernate.ddl-auto=validate
