--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/productsManagement
+spring.datasource.url=jdbc:postgresql://localhost:5455/productsManagement
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=el1972
 
 spring.jpa.hibernate.ddl-auto=validate
